--- a/mysql.yaml
+++ b/mysql.yaml
@@ -24,7 +24,7 @@
       enabled: yes
   
   - name: Connect to MySQL server
-    community.mysql.mysql_into:
+    community.mysql.mysql_info:
       login_user: root
       login_password: "{{ mysql_root_password }}"
       login_host: "{{ hosts }}"
