practice expense ansible 1

--- a/frontend.yaml
+++ b/frontend.yaml
@@ -3,7 +3,7 @@
   become: yes
   tasks:
   - name: Install Nginx
-    ansible.builtin.dns:
+    ansible.builtin.dnf:
       name: nginx
       state: installed
 
