practice expense ansible 1

--- a/frontend.yaml
+++ b/frontend.yaml
@@ -31,7 +31,7 @@
   - name: Unzip frontend code
     ansible.builtin.unarchive:
       src: /tmp/frontend.zip
-      desc: /usr/share/nginx/html
+      dest: /usr/share/nginx/html
       remote_src: yes
 
   - name: Copy expense config file
